include/rpc/connection.h

/**
 * Enumerates possible remote procedure call status values.
 */
typedef enum rpc_call_status
{
	RPC_CALL_IN_PROGRESS,		/**< Call in progress */
	RPC_CALL_MORE_AVAILABLE,	/**< Streaming response, more data available */
	RPC_CALL_DONE,			/**< Call finished, response received */
	RPC_CALL_ERROR,			/**< Call finished, error received */
	RPC_CALL_ABORTED		/**< Call was aborted by the user */
} rpc_call_status_t;
/**
 * Definition of RPC connection pointer.
 */
typedef struct rpc_connection *rpc_connection_t;
/**
 * Definition of RPC call pointer.
 */
typedef struct rpc_call *rpc_call_t;
/**
 * Performs a RPC method call using a given connection.
 *
 * Function returns immediately without waiting for a RPC completion
 * and returns rpc_call_t object representing the ongoing call.
 *
 * Function supports a callback argument of rpc_callback_t type,
 * which is a pointer to a function to be called on RPC completion.
 * Can be set to NULL when that functionality is not needed by the caller.
 *
 * @param conn Connection to do a call on
 * @param name Name of a method to be called
 * @param args Variable length RPC method arguments list
 * @param callback Callback function pointer to be called on RPC completion
 * @return RPC call object
 */
rpc_call_t rpc_connection_call(rpc_connection_t conn, const char *path,
    const char *interface, const char *name, rpc_object_t args,
    rpc_callback_t callback);
/**
 * Waits for a call to change status.
 *
 * @param call Call to wait on.
 * @return 0 on success, -1 on failure.
 */
int rpc_call_wait(rpc_call_t call);
/**
 * Requests a next chunk of a result from a call.
 *
 * When sync is set to true the function waits until the call finishes
 * and returns 1 if it has completed successfully - otherwise the function
 * returns 0.
 *
 * @param call Call to be continued
 * @param sync Synchronous continue flag
 * @return 1 for successfully completed RPC when sync flag was set, otherwise 0
 */
int rpc_call_continue(rpc_call_t call, bool sync);
/**
 * Aborts a pending call.
 *
 * @param call Call to be aborted
 * @return Function status - success is being reported as 0
 */
int rpc_call_abort(rpc_call_t call);
/**
 * Returns a current status of a given call
 * as an integer value castable to rpc_call_status_t.
 *
 * @param call Call to be checked
 * @return Call status
 */
int rpc_call_status(rpc_call_t call);
/**
 * Returns a call result (or a current fragment).
 *
 * @param call Call to get result from
 * @return Result
 */
rpc_object_t rpc_call_result(rpc_call_t call);