include/rpc/client.h

typedef struct rpc_client *rpc_client_t;
/**
 * Creates a new, connected RPC client.
 *
 * URI parameter can take multiple forms:
 * - unix://<path> connects to an Unix domain socket
 * - tcp://<ip-address>:<port> connects using a TCP socket
 * - ws://<ip-address>:<port>/<path> connects using a WebSocket
 * - loopback://<id> connects using a local transport
 *
 * @param uri Endpoint URI
 * @param params Transport-specific parameters or NULL
 * @return Connect RPC client object
 */
_Nullable rpc_client_t rpc_client_create(const char *_Nonnull uri,
    _Nullable rpc_object_t params);
/**
 * Gets the connection object from a client.
 *
 * @param client Client object to get the connection from
 * @return Connection object
 */
_Nonnull rpc_connection_t rpc_client_get_connection(_Nonnull rpc_client_t client);